--- a/newTabSearch.html
+++ b/newTabSearch.html
@@ -323,12 +323,12 @@
         <div class="control-group">
             <label>Background</label>
             <select id="backgroundSelect" onchange="changeBackground()">
-                <option value="gradient1">Purple Gradient</option>
+                <option value="gradient1">Dark Mode</option>
                 <option value="gradient2">Ocean Blue</option>
                 <option value="gradient3">Sunset</option>
                 <option value="gradient4">Forest</option>
-                <option value="solid">Solid Color</option>
-                <option value="custom">Custom Gradient</option>
+                <option value="solid">Solid Grey</option>
+                <option value="custom">Custom Color</option>
             </select>
         </div>
         <div class="control-group">
@@ -754,7 +754,7 @@
             
             // Want more bacground colors? Add them to the backgrounds list below!
             const backgrounds = {
-                gradient1: 'linear-gradient(135deg, #667eea 0%, #764ba2 100%)',
+                gradient1: 'linear-gradient(135deg, #1a1a2e 0%, #16213e 100%);',
                 gradient2: 'linear-gradient(135deg, #2196F3 0%, #21CBF3 100%)',
                 gradient3: 'linear-gradient(135deg, #f093fb 0%, #f5576c 100%)',
                 gradient4: 'linear-gradient(135deg, #4facfe 0%, #00f2fe 100%)',
